Fix sidebar styles and overflow now scrolls

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -91,35 +91,19 @@
   }
 
   #sidebar {
+    bottom: 0;
     margin-top: $topbar-height/2;
+    overflow: auto;
+    position: absolute;
+    top: 0;
+  }
+
+  #create_album {
+    margin-bottom: 0;
   }
 
   .alert {
     margin: 0;
-  }
-
-  #create_album {
-    display: block;
-    color: #008CBA;
-    margin: 0px;
-    padding: 0.4375rem 0.875rem;
-    text-decoration: none;
-    line-height: inherit;
-    box-sizing: border-box;
-    font-size: 0.875rem;
-    font-weight: normal;
-    list-style-type: none;
-    list-style-position: outside;
-    font-family: "Open Sans",Roboto,Arial,sans-serif;
-    font-style: normal;
-    cursor: auto;
-    border-style: none;
-    background-color: #FFFFFF;
-  }
-
-  #create_album:hover {
-    color: #E0FFFF;
-    background-color: #008CBA;
   }
 
   #form-box, #album-box {
